--- a/entregableModulo3/src/styles/styles.css
+++ b/entregableModulo3/src/styles/styles.css
@@ -2,4 +2,32 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url(./normalize.css);
 
+* {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
 
+main{
+    background-color: rgb(77, 209, 209);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+main section{
+    
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-wrap: wrap;
+   margin-top: 90px;
+}
+
+main section article{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
